--- a/app/src/main/res/layout/activity_add__occasion.xml
+++ b/app/src/main/res/layout/activity_add__occasion.xml
@@ -6,136 +6,183 @@
     android:layout_height="match_parent"
     android:background="@drawable/pattern"
     android:orientation="vertical"
+    android:focusableInTouchMode="true"
+    android:layoutDirection="ltr"
     android:gravity="center_horizontal"
 
     tools:context=".View.Activity.Add_Occasion">
-
-
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="@color/main">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textColor="@color/wit"
-            android:text="اضافة مناسبة"
-            android:textSize="30dp"
-            android:gravity="center_horizontal|center_vertical"/>
-
-    </android.support.v7.widget.Toolbar>
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_horizontal"
-
-        android:orientation="vertical">
+        android:layout_height="50dp"
+        android:background="@color/offwit"
+        android:layout_marginBottom="10dp"
+        app:contentInsetLeft="0dp"
+        app:contentInsetStart="0dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:id="@+id/camera_container">
-
-            <!--<ImageView-->
-                <!--android:layout_width="50dp"-->
-                <!--android:layout_height="50dp"-->
-                <!--android:id="@+id/upload_image"-->
-                <!--android:layout_margin="15dp"-->
-                <!--android:layout_gravity="left"-->
-                <!--android:src="@drawable/upload_photo"-->
-                <!--android:onClick="upload_photo"-->
-                <!--/>-->
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_margin="15dp"
-                android:layout_gravity="right"
-                android:id="@+id/upload_image"
-                android:src="@drawable/upload_photo"
-                android:layout_alignParentLeft="true"
-                android:onClick="upload_photo"
-                tools:ignore="OnClick" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
 
-
-            <ImageView
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:id="@+id/occasion_image"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/text"
+                android:text="اضافة مناسبة"
+                android:textSize="30dp"
                 android:layout_centerInParent="true"
+                android:layout_centerVertical="true"
                 />
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_margin="15dp"
-                android:layout_gravity="right"
-                android:id="@+id/publish_occasion"
-                android:src="@drawable/send"
-                android:layout_alignParentRight="true"
-                android:onClick="publish_occasion"
-                tools:ignore="OnClick" />
+
 
 
         </RelativeLayout>
 
-        <EditText
 
+    </android.support.v7.widget.Toolbar>
+
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/pattern"
+        >
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginLeft="30dp"
-            android:hint="عنوان المناسبة....."
-            android:paddingRight="10dp"
-            android:background="@drawable/search_shap"
-            android:singleLine="true"
-            android:gravity="right|center_vertical"
-            android:textColor="@color/main"
-            android:layout_marginTop="10dp"
-            android:cursorVisible="true"
-            android:id="@+id/occasion_name"/>
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+
+            android:orientation="vertical">
+
+            <!--<RelativeLayout-->
+                <!--android:id="@+id/camera_container"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:orientation="horizontal">-->
+
+                <!--&lt;!&ndash;<ImageView&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_width="50dp"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_height="50dp"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:id="@+id/upload_image"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_margin="15dp"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:layout_gravity="left"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:src="@drawable/upload_photo"&ndash;&gt;-->
+                <!--&lt;!&ndash;android:onClick="upload_photo"&ndash;&gt;-->
+                <!--&lt;!&ndash;/>&ndash;&gt;-->
 
 
-        <TextView
+            <!--</RelativeLayout>-->
 
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginLeft="30dp"
-            android:hint="تاريخ المناسبة....."
-            android:paddingRight="10dp"
-            android:background="@drawable/search_shap"
-            android:singleLine="true"
-            android:gravity="right|center_vertical"
-            android:textColor="@color/main"
-            android:layout_marginTop="30dp"
-            android:cursorVisible="true"
-            android:id="@+id/occasion_date"/>
+            <EditText
 
-
-        <EditText
-            android:id="@+id/occasion_content"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/search_shap"
-            android:hint="نبذة عن المناسبة....."
-            android:paddingRight="10dp"
-            android:gravity="right"
-            android:singleLine="false" />
+                android:id="@+id/occasion_name"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/search_shap"
+                android:cursorVisible="true"
+                android:gravity="right|center_vertical"
+                android:hint="عنوان المناسبة....."
+                android:paddingRight="10dp"
+                android:singleLine="true"
+                android:textColor="@color/text" />
 
 
+            <TextView
 
-    </LinearLayout>
+                android:id="@+id/occasion_date"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/search_shap"
+                android:cursorVisible="true"
+                android:gravity="right|center_vertical"
+                android:hint="تاريخ المناسبة....."
+                android:paddingRight="10dp"
+                android:singleLine="true"
+                android:textColor="@color/text" />
+
+
+            <EditText
+                android:id="@+id/occasion_content"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/search_shap"
+                android:gravity="right"
+                android:hint="نبذة عن المناسبة....."
+                android:paddingRight="10dp"
+                android:textColor="@color/text"
+                android:singleLine="false" />
+
+
+            <ImageView
+                android:id="@+id/upload_image"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_margin="15dp"
+                android:onClick="upload_photo"
+                android:src="@drawable/upload_photo"
+                tools:ignore="OnClick" />
+
+
+            <ImageView
+                android:id="@+id/occasion_image"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_gravity="center"
+                android:visibility="gone" />
+
+            <Button
+                android:id="@+id/publish_occasion"
+                android:layout_width="150dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_margin="15dp"
+                android:onClick="publish_occasion"
+                android:background="@drawable/add"
+                tools:ignore="OnClick" />
+
+
+        </LinearLayout>
     </ScrollView>
+
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/offwit"
+        app:contentInsetLeft="0dp"
+        app:contentInsetStart="0dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/text"
+                android:text="اضافة مناسبة"
+                android:textSize="30dp"
+                android:layout_centerInParent="true"
+                android:layout_centerVertical="true"
+                />
+
+
+        </RelativeLayout>
+
+
+    </android.support.v7.widget.Toolbar>
 
 </LinearLayout>
