--- a/app/src/main/res/layout/activity_add_news.xml
+++ b/app/src/main/res/layout/activity_add_news.xml
@@ -1,69 +1,55 @@
-<LinearLayout
-    android:layout_width="match_parent"
+<LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:background="@drawable/pattern"
-
+    android:focusableInTouchMode="true"
+    android:layoutDirection="ltr"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="@color/main">
+        android:layout_height="50dp"
+        android:background="@color/offwit"
+        android:layout_marginBottom="10dp"
+        app:contentInsetLeft="0dp"
+        app:contentInsetStart="0dp">
 
-        <TextView
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textColor="@color/wit"
-            android:text="اضافة خبر"
-            android:textSize="30dp"
-            android:gravity="center_horizontal|center_vertical"/>
+            android:orientation="horizontal">
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/text"
+                android:text="اضافة خبر"
+                android:textSize="30dp"
+                android:layout_centerInParent="true"
+                android:layout_centerVertical="true"
+                />
+
+
+        </RelativeLayout>
+
 
     </android.support.v7.widget.Toolbar>
-
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/camera_container">
-
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:id="@+id/upload_image"
-            android:layout_margin="15dp"
-            android:layout_gravity="left"
-            android:src="@drawable/upload_photo"
-            android:onClick="upload_photo"/>
-
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:id="@+id/news_image"
-            android:layout_centerInParent="true"
-            />
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_margin="15dp"
-            android:layout_gravity="right"
-            android:id="@+id/publish_news"
-            android:src="@drawable/send"
-            android:layout_alignParentRight="true"
-            android:onClick="publish_news"
-            />
-
-
-    </RelativeLayout>
-
-
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+
+        <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -89,28 +75,62 @@
             android:background="@drawable/search_shap"
             android:singleLine="true"
             android:gravity="right"
-            android:textColor="@color/main"
+            android:textColor="@color/text"
             android:cursorVisible="true"
             android:id="@+id/news_name"/>
 
 
-        <EditText
-            android:id="@+id/news_description"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/search_shap"
-            android:hint="تفاصيل الخبر....."
-            android:paddingRight="10dp"
-            android:gravity="right"
-            android:singleLine="false" />
+            <EditText
+                android:id="@+id/news_description"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/search_shap"
+                android:gravity="right"
+                android:hint="تفاصيل الخبر....."
+                android:paddingRight="10dp"
+                android:textColor="@color/text"
+                android:singleLine="false" />
+
+            <ImageView
+                android:id="@+id/upload_image"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="10dp"
+                android:layout_gravity="center"
+                android:onClick="upload_photo"
+                android:src="@drawable/upload_photo"
+                tools:ignore="OnClick" />
+
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:id="@+id/news_image"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                />
 
 
+            <Button
+                android:id="@+id/publish_news"
+                android:layout_width="150dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_margin="15dp"
+                android:onClick="publish_news"
+                android:background="@drawable/add"
+                tools:ignore="OnClick" />
+
+
+
+
+
+
+        </LinearLayout>
     </LinearLayout>
     </ScrollView>
-
 
 
 </LinearLayout>
