--- a/app/src/main/res/layout/activity_login__signup.xml
+++ b/app/src/main/res/layout/activity_login__signup.xml
@@ -2,10 +2,15 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layoutDirection="ltr"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/pattern"
     tools:context=".View.Activity.Login_Signup">
+
+
+
+
 
     <LinearLayout
         android:orientation="vertical"
@@ -14,6 +19,7 @@
         android:paddingTop="20dp"
         android:paddingLeft="24dp"
         android:paddingRight="24dp">
+
 
         <ImageView android:src="@drawable/logo"
             android:layout_width="180dp"
@@ -63,18 +69,18 @@
                 android:id="@+id/btn_login_login"
                 android:layout_width="110dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:background="@color/main"
+                android:background="@color/offwit"
                 android:padding="12dp"
                 android:layout_weight="1"
                 android:layout_marginRight="5dp"
                 android:textSize="20dp"
 
                 android:onClick="defaultLogin"
-                android:textColor="@color/wit"
+                android:textColor="@color/text"
                 android:text="تسجيل الدخول"
                 tools:ignore="OnClick" />
 
@@ -83,14 +89,14 @@
                 android:id="@+id/btn_newuser_login"
                 android:layout_width="110dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:textColor="@color/wit"
+                android:textColor="@color/text"
                 android:textSize="20dp"
 
-                android:background="@color/main"
+                android:background="@color/offwit"
                 android:padding="12dp"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1"
