--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/pattern"
     android:orientation="vertical"
+    android:id="@+id/main"
     tools:context=".View.Activity.MainActivity">
 
     <android.support.v7.widget.Toolbar android:layout_width="match_parent"
@@ -51,7 +52,8 @@
                 android:layout_weight="0"
                 android:paddingRight="10dp"
                 android:id="@+id/search_bar"
-                android:src="@drawable/search" />
+                android:src="@drawable/search"
+                android:onClick="filter"/>
 
         </LinearLayout>
 
@@ -59,7 +61,35 @@
 
     </android.support.v7.widget.Toolbar>
 
-<android.support.v4.widget.DrawerLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/search_layout"
+        android:orientation="vertical"
+        android:background="@color/offwit"
+        android:visibility="gone"
+
+        >
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_margin="8dp"
+            android:padding="8dp"
+            android:layout_gravity="right"
+            android:gravity="right|center_vertical"
+            android:id="@+id/search_text"
+            android:imeOptions="actionSearch"
+            android:inputType="text"
+            android:textColor="@color/text"
+            android:hint="ماذا تبحث عن ...."
+            android:layout_marginRight="10dp"
+            android:background="@drawable/search_shap"/>
+
+
+    </LinearLayout>
+
+    <android.support.v4.widget.DrawerLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawer">
@@ -95,30 +125,9 @@
 
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:id="@+id/search_layout"
-        android:orientation="vertical"
-        android:gravity="center_horizontal|center_vertical"
-        android:background="@color/main"
-        android:visibility="gone"
 
-        >
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_margin="8dp"
-            android:padding="8dp"
-            android:layout_gravity="right"
-            android:gravity="right|center_vertical"
-            android:id="@+id/search_text"
-            android:hint="ماذا تبحث عن ...."
-            android:layout_marginRight="10dp"
-            android:background="@drawable/search_shap"/>
 
-    </LinearLayout>
 
 
 
