--- a/app/src/main/res/layout/add_news.xml
+++ b/app/src/main/res/layout/add_news.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layoutDirection="ltr"
     android:background="@drawable/pattern"
     android:gravity="center_horizontal|center_vertical">
 
