--- a/app/src/main/res/layout/camera_image.xml
+++ b/app/src/main/res/layout/camera_image.xml
@@ -7,7 +7,7 @@
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/splash"
+        android:src="@drawable/home"
         android:id="@+id/image_item"/>
 
 </LinearLayout>
