--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -21,7 +21,7 @@
             android:layout_gravity="center"
             android:layout_weight="1"
             android:scaleType="fitXY"
-            android:src="@drawable/logo" />
+            android:src="@drawable/home" />
 
 
         <TextView
