--- a/app/src/main/res/layout/fragment_mbra.xml
+++ b/app/src/main/res/layout/fragment_mbra.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layoutDirection="ltr"
     tools:context="com.bit.apps.kanadra.View.Fragment.Mbra">
 
 
