--- a/app/src/main/res/layout/slidingimages_layout.xml
+++ b/app/src/main/res/layout/slidingimages_layout.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:layoutDirection="ltr"
     android:padding="1dip" >
 
     <ImageView
@@ -11,7 +12,8 @@
         android:adjustViewBounds="true"
         android:layout_gravity="center"
         android:src="@mipmap/ic_launcher"
-        android:scaleType="centerCrop" />
+        android:scaleType="fitXY"
+         />
 
     <TextView
         android:layout_width="match_parent"
@@ -21,5 +23,9 @@
         android:layout_margin="25dp"
         android:textSize="20dp"
         android:textColor="@color/wit"
+        android:shadowColor="#000"
+        android:shadowDx="1"
+        android:shadowDy="1"
+        android:shadowRadius="2"
         android:id="@+id/slider_title"/>
 </FrameLayout>
